added report date to config file added bat files

--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,6 @@
 /AppConfig/config.ini
 /WildberriesReport.xlsx
 /test.py
-/SimpleFlaskMock/SimpleFlaskMock.iml
+/SimpleFlaskMock1/SimpleFlaskMock.iml
 /venv/
+/.gitignore
